--- a/index.html
+++ b/index.html
@@ -180,14 +180,13 @@
                                 <div class="pidrozdil-card">
                     <div class="pidrozdil-card-img-text">
                          <img class="pidrozdil-card-img" src="img/gyr.png">
-                        <p class="pidrozdil-card-text">Головне управління розвідки</p>
+                        <p class="pidrozdil-card-text"></p>
 
                     </div>
 
-                    <p class="pidrozdil-card-text-two">підрозділ, що займається підготовкою, тренуванням та <br>
-підвищенням кваліфікації військовослужбовців.</p>
+                    <p class="pidrozdil-card-text-two">.</p>
 
-                        <p class="pidrozdil-card-kyr">Куратор: Паша Цвентух</p>
+                        <p class="pidrozdil-card-kyr"></p>
                 </div>
             </div>
 
@@ -239,7 +238,7 @@
                 <div class="Kerivnitstvo-card">
                     <img class="Kerivnitstvo-img" src="img/pol.png">
                     <p class="Kerivnitstvo-h1">Полковник</p>
-                    <p class="Kerivnitstvo-p">Цвентух Паша</p>
+                    <p class="Kerivnitstvo-p">Вакантно</p>
                 </div>
 
                                 <div class="Kerivnitstvo-card">
@@ -477,4 +476,5 @@
 
 
 </body>
+
 </html>
