--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
 
                                 <div class="pidrozdil-card">
                     <div class="pidrozdil-card-img-text">
-                         <img class="pidrozdil-card-img" src="img/gyr.png">
+                         
                         <p class="pidrozdil-card-text"></p>
 
                     </div>
 
-                    <p class="pidrozdil-card-text-two">.</p>
+                    <p class="pidrozdil-card-text-two"></p>
 
                         <p class="pidrozdil-card-kyr"></p>
                 </div>
@@ -478,3 +478,4 @@
 </body>
 
 </html>
+
