--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p class="pidrozdil-card-text-two">підрозділ, що займається підготовкою, тренуванням та <br>
 підвищенням кваліфікації військовослужбовців.</p>
 
-                        <p class="pidrozdil-card-kyr">Куратор: Марина Сластіон</p>
+                        <p class="pidrozdil-card-kyr">Куратор: Станіслав Курор</p>
                 </div>
             </div>
 
@@ -141,7 +141,7 @@
                     <p class="pidrozdil-card-text-two">підрозділ, що займається підготовкою, тренуванням та<br> 
 підвищенням кваліфікації військовослужбовців.</p>
 
-                        <p class="pidrozdil-card-kyr">Куратор: Ліза Болотна</p>
+                        <p class="pidrozdil-card-kyr">Куратор: Ілля Крід</p>
                 </div>
 
 
@@ -172,7 +172,7 @@
                     <p class="pidrozdil-card-text-two">підрозділ, що займається підготовкою, тренуванням та <br>
 підвищенням кваліфікації військовослужбовців.</p>
 
-                        <p class="pidrozdil-card-kyr">Куратор: Максим Сокол</p>
+                        <p class="pidrozdil-card-kyr">Куратор: Нікіта Верескун</p>
                 </div>
 
 
@@ -180,13 +180,14 @@
                                 <div class="pidrozdil-card">
                     <div class="pidrozdil-card-img-text">
                          
-                        <p class="pidrozdil-card-text"></p>
+                        <p class="pidrozdil-card-text">Сили територіальної оборони</p>
 
                     </div>
 
-                    <p class="pidrozdil-card-text-two"></p>
+                    <p class="pidrozdil-card-text-two">підрозділ, що займається підготовкою, тренуванням та <br>
+підвищенням кваліфікації військовослужбовців.</p>
 
-                        <p class="pidrozdil-card-kyr"></p>
+                        <p class="pidrozdil-card-kyr">Куратор: Данило Гринкевич</p>
                 </div>
             </div>
 
@@ -210,22 +211,22 @@
                 </div>
 
                         <div class="Kerivnitstvo-card">
-                    <img class="Kerivnitstvo-img" src="img/polk.png">
+                    <img class="Kerivnitstvo-img" src="img/pol.png">
                     <p class="Kerivnitstvo-h1">Полковник</p>
-                    <p class="Kerivnitstvo-p">Болотна Ліза</p>
+                    <p class="Kerivnitstvo-p">Станіслав Курор</p>
                 </div>
 
 
                         <div class="Kerivnitstvo-card">
-                    <img class="Kerivnitstvo-img" src="img/polk.png">
+                    <img class="Kerivnitstvo-img" src="img/pol.png">
                     <p class="Kerivnitstvo-h1">Полковник</p>
-                    <p class="Kerivnitstvo-p">Сластіон Марина</p>
+                    <p class="Kerivnitstvo-p">Данило Гринкевич</p>
                 </div>
 
                         <div class="Kerivnitstvo-card">
                     <img class="Kerivnitstvo-img" src="img/pol.png">
                     <p class="Kerivnitstvo-h1">Полковник</p>
-                    <p class="Kerivnitstvo-p">Сокол Максим</p>
+                    <p class="Kerivnitstvo-p">Нікіта Верескун</p>
                 </div>
 
             </div>
@@ -238,7 +239,7 @@
                 <div class="Kerivnitstvo-card">
                     <img class="Kerivnitstvo-img" src="img/pol.png">
                     <p class="Kerivnitstvo-h1">Полковник</p>
-                    <p class="Kerivnitstvo-p">Вакантно</p>
+                    <p class="Kerivnitstvo-p">Ілля Крід</p>
                 </div>
 
                                 <div class="Kerivnitstvo-card">
@@ -478,4 +479,5 @@
 </body>
 
 </html>
+
 
