--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                                 <div class="pidrozdil-card">
                     <div class="pidrozdil-card-img-text">
-                         
+                         <img class="pidrozdil-card-img" src="img/tro.png">
                         <p class="pidrozdil-card-text">Сили територіальної оборони</p>
 
                     </div>
@@ -479,5 +479,6 @@
 </body>
 
 </html>
+
 
 
